--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,5 @@ services:
     volumes:
       - ./postgres-data:/var/lib/postgresql/data
       # copy the sql script to create tables
-      - ./sql/Script0001_CreateChocolateBarTable.sql:/docker-entrypoint-initdb.d/Script0001_CreateChocolateBarTable.sql
-      - ./sql/Script0002_CreateChocolatePropertiesTable.sql:/docker-entrypoint-initdb.d/Script0002_CreateChocolatePropertiesTable.sql
+      - ./sql/data.sql:/docker-entrypoint-initdb.d/data.sql
     
